--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Health Plus Remake</string>
+    <string name="type_message">Type Message</string>
+    <string name="btn_sign_up">Sign Up</string>
+    <string name="label_profile">Profile</string>
+    <string name="btn_save">Save</string>
 
 </resources>
